<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="adapter"
            type="com.omoraless.cvandroid.ui.CVAdapter" />

        <variable
            name="information"
            type="com.omoraless.cvandroid.model.CV" />

        <variable
            name="layoutManager"
            type="androidx.recyclerview.widget.LinearLayoutManager" />

        <variable
            name="dividerItemDecoration"
            type="androidx.recyclerview.widget.DividerItemDecoration" />

        <variable
            name="progressVisibility"
            type="Integer" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/constraint_info_height"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_contact_inf"
                        android:layout_width="@dimen/cardview_photo"
                        android:layout_height="@dimen/cardview_photo"
                        android:layout_marginStart="@dimen/text_view_margin"
                        android:layout_marginLeft="@dimen/text_view_margin"
                        app:cardCornerRadius="@dimen/card_view_radius"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_name">

                        <ImageView
                            android:id="@+id/cv_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/description"
                            android:scaleType="centerCrop" />
                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/text_view_margin"
                        android:layout_marginLeft="@dimen/text_view_margin"
                        android:layout_marginTop="@dimen/text_view_margin_top"
                        android:includeFontPadding="false"
                        android:text="@{information.contact_information.name}"
                        app:fontFamily="@font/montserrat_bold"
                        app:layout_constraintStart_toEndOf="@+id/cv_contact_inf"
                        app:layout_constraintTop_toBottomOf="@+id/tv_contact" />

                    <TextView
                        android:id="@+id/tv_city_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/text_view_margin"
                        android:layout_marginLeft="@dimen/text_view_margin"
                        android:includeFontPadding="false"
                        android:text="@{information.contact_information.city_state}"
                        app:fontFamily="@font/montserrat"
                        app:layout_constraintStart_toEndOf="@+id/cv_contact_inf"
                        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                    <TextView
                        android:id="@+id/tv_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/text_view_margin"
                        android:layout_marginLeft="@dimen/text_view_margin"
                        android:includeFontPadding="false"
                        android:text="@{information.contact_information.phone_number}"
                        app:fontFamily="@font/montserrat"
                        app:layout_constraintStart_toEndOf="@+id/cv_contact_inf"
                        app:layout_constraintTop_toBottomOf="@+id/tv_city_state" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/text_view_margin"
                        android:layout_marginLeft="@dimen/text_view_margin"
                        android:includeFontPadding="false"
                        android:text="@{information.contact_information.mail}"
                        app:fontFamily="@font/montserrat"
                        app:layout_constraintStart_toEndOf="@+id/cv_contact_inf"
                        app:layout_constraintTop_toBottomOf="@+id/tv_phone_number" />

                    <TextView
                        android:id="@+id/tv_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_view_margin_top"
                        android:text="@string/contact_information"
                        app:fontFamily="@font/montserrat_bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/constraint_padding">

                    <TextView
                        android:id="@+id/career_summary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_view_margin_top"
                        android:text="@string/career_summary"
                        app:fontFamily="@font/montserrat_bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_summary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_view_margin_top"
                        android:text="@{information.contact_information.career_summary}"
                        app:fontFamily="@font/montserrat"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/career_summary" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_summary">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/constraint_padding">

                    <TextView
                        android:id="@+id/education"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_view_margin_top"
                        android:includeFontPadding="false"
                        android:text="@string/education"
                        app:fontFamily="@font/montserrat_bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_university"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="@{information.education.university}"
                        app:fontFamily="@font/montserrat"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/education" />

                    <TextView
                        android:id="@+id/tv_education_period"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{information.education.period}"
                        app:fontFamily="@font/montserrat"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_university" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_recycler_v"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_education">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/constraint_recycler_view">

                    <TextView
                        android:id="@+id/career_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_view_margin_top"
                        android:text="@string/career_history"
                        app:fontFamily="@font/montserrat_bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_career_jobs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin_top"
                        app:adapter="@{adapter}"
                        app:dividerItemDecoration="@{dividerItemDecoration}"
                        app:layoutManager="@{layoutManager}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/career_history" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{safeUnbox(progressVisibility)}"
                        app:layout_constraintBottom_toBottomOf="@+id/rv_career_jobs"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>